--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:integration": "tsc && mocha test/integration --timeout=10000",
     "test:unit": "tsc && polymer test --module-resolution=node --npm",
     "test:sauce": "tsc && polymer test --module-resolution=node --npm -s 'windows 10/microsoftedge@17' -s 'macos 10.13/safari@11'",
-    "test:regenerate_screenshots": "tsc && mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
+    "test:regenerate_screenshots": "tsc && mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000",
+    "deploy": "gcloud app deploy server/app.yaml"
   },
   "dependencies": {
     "@polymer/app-layout": "^3.0.0",
