--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "serve": "prpl-server --root server/build",
     "serve:static": "polymer serve --port 5000 build/es5-bundled",
     "test": "npm run test:unit && npm run test:integration",
-    "test:integration": "tsc && mocha test/integration --timeout=10000",
+    "test:integration": "tsc && mocha test/integration --timeout=10000 --exit",
     "test:unit": "tsc && polymer test --module-resolution=node --npm",
     "test:sauce": "tsc && polymer test --module-resolution=node --npm -s 'windows 10/microsoftedge@17' -s 'macos 10.13/safari@11'",
-    "test:regenerate_screenshots": "tsc && mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000",
+    "test:regenerate_screenshots": "tsc && mocha test/integration/screenshots-baseline/regenerate.js --timeout=30000",
     "deploy": "gcloud app deploy server/app.yaml"
   },
   "dependencies": {
